# bitwuzla

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  NEWS.md  README.md  TODO_NEWS.md  configure.py  configure.sh  meson.build  meson_options.txt  pyproject.toml  x86_64-linux-aarch64.txt  x86_64-w64-mingw32.txt
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  api.rst  api_documentation_c.rst  api_documentation_python.rst  binary.rst  building_on_windows.rst  conf.py  conf.py.in  index.rst  install.rst  jekyll_fix.py  meson.build  references.bib
docs/_static/: custom.css
docs/_templates/: layout.html
docs/c/: CMakeLists.txt  api.rst  api_c.rst  interface.rst  kinds.rst  library_info.rst  meson.build  options.rst  sort_creation.rst  term_creation.rst  term_substitution.rst
docs/cpp/: api.rst  interface.rst  kinds.rst  library_info.rst  meson.build  options.rst  sort_creation.rst  term_creation.rst  term_substitution.rst
docs/extensions/: examples.py  literalincludegen.py
docs/ocaml/: api.rst
docs/python/: api.rst  api_python.rst  interface.rst  options.rst
examples/: CMakeLists.txt  README.md  meson.build  meson_options.txt
examples/c/: CMakeLists.txt  checksatassuming.c  checksatassuming.smt2  interpolants.c  manual_reference_counting.c  meson.build  option_info.c  options.c  parse.c  print.c  pushpop.c  pushpop.smt2  quickstart.c  reset.c  reset_assertions.c  terminator.c  unsatassumptions.c  unsatassumptions.smt2  unsatcore.c
examples/cpp/: checksatassuming.cpp  interpolants.cpp  meson.build  option_info.cpp  options.cpp  parse.cpp  print.cpp  pushpop.cpp  quickstart.cpp  reset.cpp  reset_assertions.cpp  terminator.cpp  unsatassumptions.cpp  unsatcore.cpp
examples/python/: checksatassuming.py  interpolants.py  meson.build  option_info.py  options.py  parse.py  print.py  pushpop.py  quickstart.py  reset.py  reset_assertions.py  terminator.py  unsatassumptions.py  unsatcore.py
examples/smt2/: checksatassuming.smt2  interpolants.smt2  options.smt2  pushpop.smt2  quickstart.smt2  reset.smt2  reset_assertions.smt2  unsatassumptions.smt2  unsatcore.smt2
src/: CMakeLists.txt  aigprop.c  aigprop.h  bitwuzlamain.c  boolector.c  boolector.h  boolectormain.c  bzlaabort.c  bzlaabort.h  bzlaabortold.h  bzlaaig.c  bzlaaig.h  bzlaaigvec.c  bzlaaigvec.h  bzlaass.c  bzlaass.h  bzlabeta.c  bzlabeta.h  bzlabv.c  bzlabv.cpp  bzlabv.h  bzlabvdomain.c  bzlabvdomain.h  bzlabvprop.c  bzlabvprop.h  bzlabvstruct.h  bzlachkclone.c  bzlachkclone.h  bzlachkfailed.c  bzlachkfailed.h  bzlachkmodel.c  bzlachkmodel.h  bzlaclone.c  bzlaclone.h  bzlaconfig.h.in  bzlaconsutils.c  bzlaconsutils.h  bzlacore.c  bzlacore.h  bzladbg.c  (+86 more)
src/api/: checks.cpp  checks.h  enums.h  option.h
src/backtrack/: assertion_stack.cpp  assertion_stack.h  backtrackable.cpp  backtrackable.h  object.h  pop_callback.h  unordered_map.h  unordered_set.h  vector.h  vector_map.h
src/check/: check_interpolant.cpp  check_interpolant.h  check_model.cpp  check_model.h  check_term.cpp  check_term.h  check_unsat_core.cpp  check_unsat_core.h
src/dumper/: bzladumpaig.c  bzladumpaig.h  bzladumpbtor.c  bzladumpbtor.h  bzladumpsmt.c  bzladumpsmt.h
src/lib/: meson.build
src/main/: CMakeLists.txt  error.h  main.cpp  meson.build  options.cpp  options.h  time_limit.cpp  time_limit.h
src/node/: kind_info.cpp  kind_info.h  node.cpp  node.h  node_data.cpp  node_data.h  node_kind.cpp  node_kind.h  node_manager.cpp  node_manager.h  node_ref_vector.h  node_translation.cpp  node_translation.h  node_unique_table.cpp  node_unique_table.h  node_utils.cpp  node_utils.h  unordered_node_ref_map.h  unordered_node_ref_set.h
src/option/: option.cpp  option.h
src/parser/: bzlabtor.c  bzlabtor.cpp  bzlabtor.h  bzlabtor2.c  bzlabtor2.h  bzlasmt.c  bzlasmt.h  bzlasmt2.c  bzlasmt2.cpp  bzlasmt2.h  parser.h
src/preprocess/: assertion_tracker.cpp  assertion_tracker.h  assertion_vector.cpp  assertion_vector.h  bzlaack.c  bzlaack.h  bzlader.c  bzlader.h  bzlaelimapplies.c  bzlaelimapplies.h  bzlaelimites.c  bzlaelimites.h  bzlaelimslices.c  bzlaelimslices.h  bzlaembed.c  bzlaembed.h  bzlaextract.c  bzlaextract.h  bzlamerge.c  bzlamerge.h  bzlaminiscope.c  bzlaminiscope.h  bzlanormadd.c  bzlanormadd.h  bzlanormquant.c  bzlanormquant.h  bzlapputils.c  bzlapputils.h  bzlapreprocess.c  bzlapreprocess.h  bzlaskel.c  bzlaskel.h  bzlaskolemize.c  bzlaskolemize.h  bzlaunconstrained.c  bzlaunconstrained.h  bzlavarsubst.c  bzlavarsubst.h  preprocessing_pass.cpp  preprocessing_pass.h  (+4 more)
src/printer/: btor2_printer.cpp  btor2_printer.h  exception.h  printer.cpp  printer.h  smt2_printer.cpp  smt2_printer.h
src/rewrite/: evaluator.cpp  evaluator.h  rewrite_utils.cpp  rewrite_utils.h  rewriter.cpp  rewriter.h  rewrites_array.cpp  rewrites_array.h  rewrites_bool.cpp  rewrites_bool.h  rewrites_bv.cpp  rewrites_bv.h  rewrites_bv_interp.cpp  rewrites_bv_interp.h  rewrites_bv_norm.cpp  rewrites_bv_norm.h  rewrites_core.cpp  rewrites_core.h  rewrites_fp.cpp  rewrites_fp.h
src/sat/: ae_kissat.cpp  ae_kissat.h  bzlacadical.c  bzlacadical.cpp  bzlacadical.h  bzlacms.cpp  bzlacms.h  bzlagimsatul.c  bzlagimsatul.h  bzlakissat.c  bzlakissat.cpp  bzlakissat.h  bzlalgl.c  bzlalgl.h  bzlaminisat.cpp  bzlaminisat.h  bzlapicosat.c  bzlapicosat.h  cadical.cpp  cadical.h  cryptominisat.cpp  cryptominisat.h  distinct_decision_heuristic.cpp  (+15 more)
test/: CMakeLists.txt  run-test-case.py  test.h  test_aig.cpp  test_aigvec.cpp  test_api.cpp  test_arithmetic.cpp  test_bv.cpp  test_bvdomain.cpp  test_bvdomaingen.cpp  test_bvprop.cpp  test_bvpropgen.cpp  test_comp.cpp  test_constbits.cpp  test_essutils.cpp  test_exp.cpp  test_fp.cpp  test_hash.cpp  test_inc.cpp  test_inthash.cpp  test_inthashmap.cpp  test_invutils.cpp  test_lambda.cpp  test_logic.cpp  test_mem.cpp  test_misc.cpp  test_modelgen.cpp  test_modelgensmt2.cpp  test_nodemap.cpp  test_normquant.cpp  test_overflow.cpp  test_parseerror.cpp  test_prop.cpp  test_propcomplete.cpp  test_propcons.cpp  test_propess.cpp  test_propinv.cpp  test_propinvcomplete.cpp  test_propold.cpp  test_propoldcomplete.cpp  (+10 more)
(+3214 files in other folders)
