option('python', type: 'boolean', value: false)
option('testing', type: 'feature', value: 'auto')
option('unit_testing', type: 'feature', value: 'auto')
option('docs', type: 'boolean', value: false)
option('cadical', type: 'boolean', value: true)
option('kissat', type: 'boolean', value: false)
option('cryptominisat', type: 'boolean', value: false)
option('gimsatul', type: 'boolean', value: false)
option('fpexp', type: 'boolean', value: false)
option('aiger', type: 'boolean', value: false)
option('mimalloc', type: 'boolean', value: false)
