[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython>=3.0.0']

[project]
name = 'bitwuzla'
description = 'Bitwuzla Satisfiability Modulo Theories Solver'
requires-python = '>= 3.7'
license = {file = 'COPYING'}
authors = [
  {name = 'Aina Niemetz'},
  {name = 'Mathias Preiner'},
]

[tool.meson-python.args]
dist = []
setup = ['-Dpython=true']
compile = ['python-bindings']
install = ['--tags=python-bindings']
